Fix: Warning messages are not very legible

--- a/OpenXava/web/style/light.css
+++ b/OpenXava/web/style/light.css
@@ -1128,7 +1128,7 @@ input[type="button"], .ipad input[type="button"]:hover,
 }
 
 .ox-warnings .ox-message-box {	
-	background: #f6dc5c;
+	background: #ffb347;
 }
 
 .ox-action-link {
