--- a/OpenXavaTest/web/xava/style/terra.css
+++ b/OpenXavaTest/web/xava/style/terra.css
@@ -1261,7 +1261,7 @@ input[type="button"],
 }
 
 .ox-warnings .ox-message-box {	
-	background: #f6dc5c;
+	background: #ffb347;
 }
 
 .ox-action-link {
